# fea

./: airfoil.pickle  cp_data.txt  cubebeam.py  euler_bernoulli.py  ex.ipynb  fea.py  naca_airfoil.py  naca_mesher.py  pyproject.toml  render_test.py  stress_strain_siffness.py  test_beam.py  test_constraint.py  test_mesh.py  test_mesh_vista.py  truss.py  units.py  utils.py  wing.py  wing_fea.py
lib/: core.py  geometry.py  test_core.py
