[project]
name = "fea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ezdxf>=1.3.5",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "meshpy>=2022.1.3",
    "pygame>=2.6.1",
    "pythreejs>=2.4.2",
    "pyvista>=0.44.2",
    "rich>=13.9.4",
    "scipy>=1.14.1",
    "tqdm>=4.67.1",
    "triangle>=20230923",
]
